src/share/poudriere/html/assets/poudriere.css
/* vim: set sts=4 sw=4 ts=4 noet: */
body {
        font-family: Arial, Helvetica, sans-serif;
        font-size: 9pt;
}

a {
        text-decoration: none;
}

#loading_overlay {
	background: #FFF;
	width: 100%;
	height: 100%;
	z-index: 3;
	top: 0;
	left: 0;
	position: fixed;
}
#loading {
	z-index: 4;
	top: 50%;
	left: 50%;
	position: absolute;
}

table {
	border-collapse: collapse;
	border: 2px solid black;
	margin-top: 5px;
	font-size: 9pt;
}
th, td { border: 1px solid black; }

.layout,
.layout th,
.layout td {
	border: 0;
}
.built {
        background-color: #339966;
        color: #CCFFCC;
}
.failed {
        background-color: #CC0033;
        color: #FFFF99;
}
.skipped {
        background-color: #CC6633;
        color: #F0F0F0;
}
.ignored {
        background-color: #FFCC33;
        color: #202020;
}
.remaining { background-color: #E3E3E3; }
.new { display: none; }
#header {
	top: 0;
	height: 95px;
	border-bottom: 1px solid black;
}

#header, #footer {
	background-color: #EEEEEE;
	z-index: 2;
	left: 0;
	width: 100%;
	position: fixed;
}

#header table {
	font-size: 9pt;
	text-align: center;
}

#main {
	margin-bottom: 22px; /* footer */
	margin-top: 95px;
	width: 100%;
	height: 100%;
}

#footer {
	bottom: 0;
	height: 22px;
	margin-top: 5px;
	border-top: 1px solid black;
}

/* http://nicolasgallagher.com/jump-links-and-viewport-positioning/demo */
.anchor {
	border-top: 95px solid transparent;
	margin-top: -95px;
	-webkit-background-clip: padding-box;
	-moz-background-clip: padding;
	background-clip: padding-box;
}

#left {
	width: 21%;
	float: left;
}
#right {
	float: left;
	width: 75%;
	margin-bottom: 25px;
	margin-left: 10px;
}
#header_left { float: left; }
#header_right {
	margin-top: 5px;
	margin-left: 5px;
	float: left;
	width: 80%;
}
#nav {
	float: left;
}
#logo {
	float: left;
}
#logo h1 {
	display: none;
	margin: 0;
}
#stats {
	float: left;
}
#stats table {
	width: 502px;/* canvas size */
	border: 0;
	margin-bottom: 1px;
}
#stats td {
	width: 16.66%;
}
#progress {
	right: 0;
	position: absolute;
}
#build_info {
	float: left;
	margin-right: 5px;
}
#build_info table {
	border: 0;
	float: left;
	text-align: left;
}

#built_table td:nth-child(2) {
        width: 45%;
}

#built_table td:nth-child(3) {
        width: 10%;
}

#failed_table td:nth-child(2) {
        width: 32%;
}

#failed_table td:nth-child(3) {
        width: 16%;
}

#failed_table td:nth-child(4) {
        width: 10%;
}

#failed_table td:nth-child(5) {
        width: 10%;
}

#skipped_table td:nth-child(1) {
        width: 32%;
}

#skipped_table td:nth-child(2) {
        width: 32%;
}

#ignored_table td:nth-child(1) {
        width: 22%;
}

#ignored_table td:nth-child(2) {
        width: 22%;
}

#ignored_table td:nth-child(3) {
        width: 10%;
}

#ignored {
        margin-bottom: 200px;
}

h1 {
	font-size: 16pt;
	text-align: center;
}
h2 {
	background-color: #eee;
	padding: 2px 5px;
}
.status {
	padding-bottom: 20px;
}
br.clear {
	clear: both;
	height: 0;
	overflow: hidden;
}
.ports {
	float: left;
}
:target { color: #FF0000; }

